www/css/style.css
/* Empty. Add your own CSS if you like */
.loading-text{
    font-weight: 400 !important;
    font-size: 14px !important;
    color: #5d5c5e;
}

.item-divider{
    border-top-width: 0px !important;
}

.border-list .item {
    border: none;
    border-bottom: 1px solid #dcdcdc;
}

.button-keypad .icon:before, .button-small.icon:before, .button-small.icon-left:before, .button-small.icon-right:before {
    font-size: 24px;
    color: #a8adaf;
}

.bar-keypad{
    border-color: #263238;
    background-color: #263238;
}

.bar-keypad .button {
    border-color: #263238;
    background-color: #263238;
    color: #fff;
}

.button-keypad{
    border-color: #263238;
    background-color: #263238;
    color: #fff;
}

.pcode-button{
    background-color: #F3E5F5;
    box-shadow: none !important;
}

.popup-head{
    background-color: #009688;
    padding: 14px 18px;
}

.popup-head h3, h5{
    color: white;
}

.popup-head h3{
    font-weight: 400 !important;
    font-size: 14px !important;
    text-align: left;
}

.popup-head h5{
    font-weight: 500 !important;
    font-size: 32px !important;
    text-align: left;
}

.popup-body{
    background-color: white;
}

.popup-buttons{
    background-color: white;
}

.popup-buttons button{
    color: #009688 !important;
    padding: 0px !important;
}

.bar .button {
    min-width: 70px;
    max-width: 100%;
    padding:0px;
    width: 56px;
}

.button-fab{
    font-size: 24px;
}

.bar .button-store {
    max-width: 120px;
    width: initial;
    line-height: 56px;
    font-weight: 400 !important;
    font-size: 12px !important;
}

.item{
    margin: 0px !important;
}

.item-complex .item-content, .item-radio .item-content {
    padding: 16px 16px 16px 16px;
}

.button-option{
    font-size: 24px !important;
}

.bar .title {
    margin: 0 0px;
    left: 72px !important;
    right: 0px !important;
}

.item, .item-complex .item-content, .item-radio .item-content {
      background-color: white;
}

.item-icon-left .icon, .item-icon-right .icon {
    font-size: 24px;
}

.sidemenu_header{
    background-image: url(../img/sidemenu_header_bg.jpg);
}
.sidemenu_header_top{
    height: 64px;
}

.sidemenu_header_user_detail{
    height: 72px;
    padding-bottom: 8px;
    border-width: 1px;
    border-color: #ddd;
}

.sidemenu_username {
    font-weight: 500;
    font-size: 14px;
    margin: 16px;
    color: #ffffff;
}

.sidemenu_email {
    font-weight: 400;
    font-size: 14px;
    margin: 16px;
    color: #ffffff;
}

.sidemenu_role {
    font-weight: 400;
    font-size: 14px;
    margin: 16px;
    color: #ffffff;
}

.sidemenu_border{
    height: 1px;
    background-color: #bac1c9;
}

.sidemenu_list .list{
    padding-top: 8px;
}

.sidemenu_item {
    height: 48px;
    font-weight: 500;
    font-size: 14px;
    line-height: 48px;
    border-width: 0px;
}

.sidemenu_item.active {
    background-color: #ebebeb;
}

.sidemenu_item_icon{
    color: #737373;
}

.sidemenu_item_text{
    padding: 0px 0px 0px 18px;
    color: black;
}

.sidemenu_item .item-content{
    padding: 0px 0px 0px 0px;
}

.role-table {
  border: 1px solid #ddd;
  border-radius: 2px;
  background: #f7f7f7;
}

#role-table-header{
    height: 56px;
    font-weight: 500 !important;
    font-size: 12px !important;
    color: #727272;
    border: 1px solid #e0e0e0;
}

#role-table-header th{
    vertical-align: middle;
    text-align: center;
    padding-left: 12px;
    padding-right: 12px;
}

.role-table-data{
    height: 48px;
    font-weight: 400 !important;
    font-size: 13px !important;
    color: #212121;
    border: 1px solid #e0e0e0;
}

.role-table-data td{
    vertical-align: middle;
    text-align: center;
    padding-left: 12px;
    padding-right: 12px;
}

.role-table-data{
    height: 48px;
    font-weight: 400 !important;
    font-size: 13px !important;
    color: #212121;
    border: 1px solid #e0e0e0;
}

.role-table-data td{
    vertical-align: middle;
    text-align: center;
}

.purplebutton{
  background-color: #E1BEE7;
  color: black;
}

.purplebutton:hover{
  color: white;
}

.greenbutton{
  background-color: #CE93D8;
  color: black;
}

.bluebutton{
  background-color: blue;
  color: white;
}
.bluebutton:hover{
  /*background-color: blue;*/
  color: white;
}

.addbutton{
  min-width: 78px;
  max-width: 78px;
  padding: 0px;
}

.row{
height: 60px;
/*line-height: 30px;*/
display: flex;
align-items: center;
}

.ss480{
  height: 236px;
}

/*.ss568{
  height: 324px;
}*/

.ss568{
  height: 324px;
}

.center{
  display: -webkit-box;
    display: -moz-box;
    display: -ms-flexbox;
    display: -webkit-flex;
    display: flex;
    -webkit-box-direction: normal;
    -moz-box-direction: normal;
    -webkit-box-orient: horizontal;
    -moz-box-orient: horizontal;
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    -webkit-flex-wrap: nowrap;
    -ms-flex-wrap: nowrap;
    flex-wrap: nowrap;
    -webkit-box-pack: center;
    -moz-box-pack: center;
    -webkit-justify-content: center;
    -ms-flex-pack: center;
    justify-content: center;
    -webkit-align-content: stretch;
    -ms-flex-line-pack: stretch;
    align-content: stretch;
    -webkit-box-align: center;
    -moz-box-align: center;
    -webkit-align-items: center;
    -ms-flex-align: center;
    align-items: center;
}

.brg-bg,
.button-brg,
.bar .button-brg,
.header-brg,
.button-bar-brg,
.bar-brg,
.brg-border,
.brg-bg:hover,
.button-brg:hover,
.bar .button-brg:hover,
.header-brg:hover,
.button-bar-brg:hover,
.bar-brg:hover,
.brg-border:hover,
.brg-bg:active,
.button-brg:active,
.bar .button-brg:active,
.header-brg:active,
.button-bar-brg:active,
.bar-brg:active,
.brg-border:active,
.brg-bg.activated,
.button-brg.activated,
.bar .button-brg.activated,
.header-brg.activated,
.button-bar-brg.activated,
.bar-brg.activated,
.brg-border.activated {
    background-color: #5E3462;
    color: #fff;
}

.brg-a-bg,
.button-brg-a,
.bar .button-brg-a,
.header-brg-a,
.button-bar-brg-a,
.bar-brg-a,
.brg-a-border,
.brg-a-bg:hover,
.button-brg-a:hover,
.bar .button-brg-a:hover,
.header-brg-a:hover,
.button-bar-brg-a:hover,
.bar-brg-a:hover,
.brg-a-border:hover,
.brg-a-bg:active,
.button-brg-a:active,
.bar .button-brg-a:active,
.header-brg-a:active,
.button-bar-brg-a:active,
.bar-brg-a:active,
.brg-a-border:active,
.brg-a-bg.activated,
.button-brg-a.activated,
.bar .button-brg-a.activated,
.header-brg-a.activated,
.button-bar-brg-a.activated,
.bar-brg-a.activated,
.brg-a-border.activated {
    background-color: #EEFF41;
    color: #000;
}

